Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -29,9 +29,13 @@ As explained in the previous post titled "How to containerize the .NET Framework
 
 However, when you need to deploy your image as a container into production environments, you first need to publish/push your images into a Docker Registry (i.e. Docker Hub or Azure Container Registry) as in the following evolved figure.
 
-************** TBD image ************** 
+![image](https://user-images.githubusercontent.com/1712635/38650866-17f7d810-3db3-11e8-996b-27d918b7f7a7.png)
+
+This particular scenario focuses just on the area highlighted in yellow.
+
+************** TBD - VS Publish steps ************** 
 
 ##  Scenario 2: Publish/Push your Windows Container image into a Docker Registry (i.e. Docker Hub) using the Docker CLI
 
-************** TBD image ************** 
+************** TBD - docker push steps **************
 
