Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -31,11 +31,19 @@ However, when you need to deploy your image as a container into production envir
 
 ![image](https://user-images.githubusercontent.com/1712635/38650866-17f7d810-3db3-11e8-996b-27d918b7f7a7.png)
 
-This particular scenario focuses just on the area highlighted in yellow.
+This particular scenario focuses just on the area highlighted in yellow, meaning the steps on how you can create your custom Docker image and have it ready in your local development PC.
+
+![image](https://user-images.githubusercontent.com/1712635/38651092-2a29c0ba-3db4-11e8-92f7-67f62e932ab2.png)
 
 ************** TBD - VS Publish steps ************** 
 
 ##  Scenario 2: Publish/Push your Windows Container image into a Docker Registry (i.e. Docker Hub) using the Docker CLI
+
+As mentioned, when you need to deploy your image as a container into production environments, you first need to publish/push your images into a Docker Registry (i.e. Docker Hub or Azure Container Registry).
+
+This is precisely the scenario highlighted in yellow in the following figure.
+
+![image](https://user-images.githubusercontent.com/1712635/38651105-3d7261f4-3db4-11e8-8721-7d3cbd8ca324.png)
 
 ************** TBD - docker push steps **************
 
