--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -35,6 +35,18 @@ This particular scenario focuses just on the area highlighted in yellow, meaning
 
 ![image](https://user-images.githubusercontent.com/1712635/38696246-7fa56a32-3e43-11e8-8769-3e4768308817.png)
 
+### Compile your .NET application bits and publish it in a local folder
+
+In order to create a Windows Container image you first need to generate your .NET application's bits by compiling it and publishing in a local folder.
+
+From Visual Studio 2017 you can do both steps from the 
+
+XXXXXXXXXXX TO CONTINUE XXXXXXXXXX
+
+**NOTE ON DOCKER MULTI-STAGE BUILDS:** In the near future when Docker Multi-Stage builds are supported in Windows Containers you won't need to first compile and publish the app's bits in a folder because with Docker Multi-Stage build when running docker-compose build/up it will also compile the .NET bits in a previous stage by using a .NET SDK/Build image and then it will generate the final app's image, all in a single docker-compose build execution. No need to compile/publish from Visual Studio.
+
+Docker Multi-Stage builds are already supported for Linux containers as of April 2018.
+
 ************** TBD - VS Publish steps ************** 
 
 ##  Scenario 2: Publish/Push your Windows Container image into a Docker Registry (i.e. Docker Hub) using the Docker CLI
