Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -35,9 +35,40 @@ This particular scenario focuses just on the area highlighted in yellow, meaning
 
 ![image](https://user-images.githubusercontent.com/1712635/38696246-7fa56a32-3e43-11e8-8769-3e4768308817.png)
 
-### Compile your .NET application bits and publish it in a local folder
+**1. Confirm/change the name and tag of your custom image to create**
 
-In order to create a Windows Container image you first need to generate your .NET application's bits by compiling it and publishing in a local folder.
+Open the docker-compose.yml file and check the name of your custom image to be created. For instance, in the following .YML code it is named as `eshop/modernizedmvc:4.7.1-windowsservercore-1709`, where `eshop` has to coincide with the name of the repo or organization at the Docker Registry (such as Docker Hub), `eshop/modernizedmvc` is the full name of the image, and `:4.7.1-windowsservercore-1709` is a tag which can specify any characteristic of the image, like version, etc. 
+Common tags are: `latest`, `dev`, etc.
+
+
+  version: '3'
+  services:
+    eshop.modernized.mvc:
+      image: eshop/modernizedmvc:4.7.1-windowsservercore-1709
+      build:
+        context: .\src\eShopModernizedMVC
+        dockerfile: Dockerfile
+      depends_on:
+        - sql.data
+  
+    sql.data:
+      image: microsoft/mssql-server-windows-developer
+
+In our case, we're specifying the version of the ASP.NET base image `microsoft/aspnet:4.7.1-windowsservercore-1709` we're using at the `dockerfile` (such as the [dockerfile](https://github.com/dotnet-architecture/eShopModernizing/blob/master/eShopModernizedMVCSolution/src/eShopModernizedMVC/Dockerfile) within the eShopModernizedMVC project) because certain deployment environments might only support specific versions of Windows Server Core (1709 vs. older), so you can discriminate or select the right image.
+
+**2. Compile your .NET application bits and publish it in a local folder**
+
+In order to create a Windows Container image you first need to generate your .NET application's bits by compiling it and publishing in a local folder. In order to do so in Visual Studio, right click on the eShopModernized project and hit on the `Publish` menu option as shown below. 
+
+![image](https://user-images.githubusercontent.com/1712635/38697246-4b74ce44-3e46-11e8-9939-57519b95e701.png) 
+
+Then, make sure that the selected profile is of type **"FolderProfile"** and very importantly, make sure that the target location is set to **"obj\docker\publish"** as that is the path where `docker-compose build` will look for the compiled app's bits.
+ 
+Once those settings are confirmed, hit on the Publish button.
+
+
+
+
 
 From Visual Studio 2017 you can do both steps from the 
 
