Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -37,7 +37,7 @@ This particular scenario focuses just on the area highlighted in yellow, meaning
 
 **1. Confirm/change the name and tag of your custom image to create**
 
-Open the docker-compose.yml file and check the name of your custom image to be created. For instance, in the following .YML code it is named as `eshop/modernizedmvc:4.7.1-windowsservercore-1709`, where `eshop` has to coincide with the name of the repo or organization at the Docker Registry (such as Docker Hub), `eshop/modernizedmvc` is the full name of the image, and `:4.7.1-windowsservercore-1709` is a tag which can specify any characteristic of the image, like version, etc. 
+Open the `docker-compose.yml` file within the eShopModernizedMVC solution folder and check the name of your custom image to be created. For instance, in the following .YML code it is named as `eshop/modernizedmvc:4.7.1-windowsservercore-1709`, where `eshop` has to coincide with the name of the repo or organization at the Docker Registry (such as Docker Hub), `eshop/modernizedmvc` is the full name of the image (without tag), and `:4.7.1-windowsservercore-1709` is a tag which can specify any characteristic of the image, like version, etc. 
 Common tags are: `latest`, `dev`, etc.
 
     version: '3'
@@ -57,27 +57,31 @@ In our case, we're specifying the version of the ASP.NET base image `microsoft/a
 
 **2. Compile your .NET application bits and publish it in a local folder**
 
-In order to create a Windows Container image you first need to generate your .NET application's bits by compiling it and publishing in a local folder. In order to do so in Visual Studio, right click on the eShopModernized project and hit on the `Publish` menu option as shown below. 
+In order to create a Windows Container image you first need to generate your .NET application's bits plus web/HTML files by compiling it and publishing in a local folder. In order to do so in Visual Studio, right click on the `eShopModernized `project and hit on the `Publish` menu option as shown below. 
 
 ![image](https://user-images.githubusercontent.com/1712635/38697246-4b74ce44-3e46-11e8-9939-57519b95e701.png) 
 
 Then, make sure that the selected profile is of type **"FolderProfile"** and very importantly, make sure that the target location is set to **"obj\docker\publish"** as that is the path where `docker-compose build` will look for the compiled app's bits.
  
-Once those settings are confirmed, hit on the Publish button.
+Once those settings are confirmed, hit on the Publish button. Once it finished, you can check the files to be deployed (copied within the Docker image) with the File Explorer, such as the following screenshot.
+
+![image](https://user-images.githubusercontent.com/1712635/38698490-16caf674-3e4a-11e8-955b-c1ed986ba453.png)
+
+**NOTE ON DOCKER MULTI-STAGE BUILDS:** In the near future when Docker Multi-Stage builds are supported in Windows Containers you won't need to first compile and publish the app's bits in a folder because with Docker Multi-Stage build when running docker-compose build/up it will also compile the .NET bits in a previous stage by using a .NET SDK/Build image and then it will generate the final app's image, all in a single docker-compose build execution. No need to compile/publish from Visual Studio. Docker Multi-Stage builds are already supported for Linux containers as of April 2018.
+
+**2. Create the Windows Container image with "docker-compose build"**
+
+Now, with all the bits and web app files ready to be published placed on the **"obj\docker\publish"** folder, you can create the Docker image with the following steps.
+
+Open a PoewrShell or Command-Prompt window and go to the root folder of eShopModernizedMVC where the docker-compose files for that solution are placed.
+
+Then, just run the command `docker-compose build`, so it created your custom Windows Container image and registers it into your local Docker Repository in your PC, like in the following execution.
+
+![image](https://user-images.githubusercontent.com/1712635/38698749-f5db875c-3e4a-11e8-9718-34eef9f230b3.png)
+
+Confirm that you have it locally registered by running 'docker images' and checking that the image appears in the list with the specific tag that you had.
 
 
-
-
-
-From Visual Studio 2017 you can do both steps from the 
-
-XXXXXXXXXXX TO CONTINUE XXXXXXXXXX
-
-**NOTE ON DOCKER MULTI-STAGE BUILDS:** In the near future when Docker Multi-Stage builds are supported in Windows Containers you won't need to first compile and publish the app's bits in a folder because with Docker Multi-Stage build when running docker-compose build/up it will also compile the .NET bits in a previous stage by using a .NET SDK/Build image and then it will generate the final app's image, all in a single docker-compose build execution. No need to compile/publish from Visual Studio.
-
-Docker Multi-Stage builds are already supported for Linux containers as of April 2018.
-
-************** TBD - VS Publish steps ************** 
 
 ##  Scenario 2: Publish/Push your Windows Container image into a Docker Registry (i.e. Docker Hub) using the Docker CLI
 
