Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -81,7 +81,7 @@ Then, just run the command `docker-compose build`, so it created your custom Win
 
 Confirm that you have it locally registered by running 'docker images' and checking that the image appears in the list with the specific tag that you had.
 
-
+![image](https://user-images.githubusercontent.com/1712635/38698893-60db724c-3e4b-11e8-9c1c-3d270d44069e.png)
 
 ##  Scenario 2: Publish/Push your Windows Container image into a Docker Registry (i.e. Docker Hub) using the Docker CLI
 
