Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -91,5 +91,16 @@ This is precisely the scenario highlighted in yellow in the following figure.
 
 ![image](https://user-images.githubusercontent.com/1712635/38696268-8c40bc06-3e43-11e8-8e79-e904ba5ed26b.png)
 
-************** TBD - docker push steps **************
+The steps to publish an image into a Docker Registry are the following:
+
+1. Open a PowerShell or CMD window
+
+2. Login into your selected Docker Registry, such as Docker Hub or Azure Container Registry.
+In this case, we're using Docker Hub, so we're authenticating against Docker Hub with the `docker login` command, such as in the following screenshot.
+
+![image](https://user-images.githubusercontent.com/1712635/38699139-10206fc8-3e4c-11e8-938a-39ea66fded01.png) 
+
+If you want to authenticate against Azure Container Registry, you need to use the Azure CLI command `az acr login`. For further instructions on how to do it with Azure Container Registry, check it out [here](https://docs.microsoft.com/en-us/azure/container-registry/container-registry-authentication).
+
+3.  
 
