Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -102,5 +102,21 @@ In this case, we're using Docker Hub, so we're authenticating against Docker Hub
 
 If you want to authenticate against Azure Container Registry, you need to use the Azure CLI command `az acr login`. For further instructions on how to do it with Azure Container Registry, check it out [here](https://docs.microsoft.com/en-us/azure/container-registry/container-registry-authentication).
 
-3.  
+3. Push your image to the Docker Registry with `docker push [name-of-image]` but before doing that, make sure that the prefix, such as "eshop" already exists as a user or as an organization in the Docker Registry, in the first place.
 
+![image](https://user-images.githubusercontent.com/1712635/38699524-1971b112-3e4d-11e8-8e8b-25e6b4ff10d8.png)
+
+4. Check in the Docker Registry UI (in this case, Docker Hub portal) that the image was correctly uploaded.
+You can also check that our public eShopModernizedMVC images are published here:
+
+[https://hub.docker.com/r/eshop/modernizedmvc/tags/](https://hub.docker.com/r/eshop/modernizedmvc/tags/)
+
+![image](https://user-images.githubusercontent.com/1712635/38699696-998a7d34-3e4d-11e8-9cee-63914686f9ae.png) 
+
+With that, the image is ready to be deployed in any deployment environment such as:
+- Azure Container Instances
+- Azure VM with Windows Server 2016 with Windows Containers support
+- Azure Service Fabric
+- Azure Container Service (Kubernetes) 
+
+Check out the rest of the Wiki posts in order to actually deploy the application containers into any of those deployment environments.
