Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -104,6 +104,8 @@ If you want to authenticate against Azure Container Registry, you need to use th
 
 3. Push your image to the Docker Registry with `docker push [name-of-image]` but before doing that, make sure that the prefix, such as "eshop" already exists as a user or as an organization in the Docker Registry, in the first place.
 
+Example: `docker push eshop/modernizedmvc:4.7.1-windowsservercore-1709`
+
 ![image](https://user-images.githubusercontent.com/1712635/38699524-1971b112-3e4d-11e8-8e8b-25e6b4ff10d8.png)
 
 4. Check in the Docker Registry UI (in this case, Docker Hub portal) that the image was correctly uploaded.
