Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -122,3 +122,12 @@ With that, the image is ready to be deployed in any deployment environment such 
 - Azure Container Service (Kubernetes) 
 
 Check out the rest of the Wiki posts in order to actually deploy the application containers into any of those deployment environments.
+
+##  Scenario 3: Use CI/CD pipelines to build your Docker images and publish them into a Docker Registry
+
+The previous manual steps are good enough when learning Docker and Windows Containers or for a local developer scenario.
+But in real projects, we encourage you to automate the application build, Docker image build, image publish to a Docker registry and even the deployment to final deployment environments such as the ones mentioned in Azure.
+
+Basically, using CI/CD approach, the developer shouldn't manually push anything from his/her PC but just push the code to the initial code repo, such as a Git repo (GitHub, VSTS, etc.) as shown in the following diagram.
+
+******* TBD ********
