Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -21,7 +21,7 @@ Publishing your custom Docker images in a Docker Registry requires a 2-step proc
 
 You can also do the same action but in an automated way from your CI or build pipelines like in Visual Studio Team Services (VSTS) or Jenkins.
 
-##  Scenario 1: Create your Windows Container image with Docker CLI and Visual Studio
+##  Scenario 1: Create your Windows Container images
 
 As explained in the previous post titled "How to containerize the .NET Framework web apps with Windows Containers and Docker", the following image shows you the environment in your local development PC when creating and running your containers locally.
 
@@ -35,7 +35,13 @@ This particular scenario focuses just on the area highlighted in yellow, meaning
 
 ![image](https://user-images.githubusercontent.com/1712635/38696246-7fa56a32-3e43-11e8-8769-3e4768308817.png)
 
-**1. Confirm/change the name and tag of your custom image to create**
+
+### Option 1.A (Straightforward): Use a single script to build your All the apps and create All the Windows Container images
+
+
+### Option 1.B (Manual steps per app and Windows Container images): Build/Publish your app's files with Visual Studio and create your Windows Container image with Docker CLI (docker-compose build or docker build)
+
+**1.B.1. Confirm/change the name and tag of your custom image to create**
 
 Open the `docker-compose.yml` file within the eShopModernizedMVC solution folder and check the name of your custom image to be created. For instance, in the following .YML code it is named as `eshop/modernizedmvc:4.7.1-windowsservercore-1709`, where `eshop` has to coincide with the name of the repo or organization at the Docker Registry (such as Docker Hub), `eshop/modernizedmvc` is the full name of the image (without tag), and `:4.7.1-windowsservercore-1709` is a tag which can specify any characteristic of the image, like version, etc. 
 Common tags are: `latest`, `dev`, etc.
@@ -55,7 +61,7 @@ Common tags are: `latest`, `dev`, etc.
 
 In our case, we're specifying the version of the ASP.NET base image `microsoft/aspnet:4.7.1-windowsservercore-1709` we're using at the `dockerfile` (such as the [dockerfile](https://github.com/dotnet-architecture/eShopModernizing/blob/master/eShopModernizedMVCSolution/src/eShopModernizedMVC/Dockerfile) within the eShopModernizedMVC project) because certain deployment environments might only support specific versions of Windows Server Core (1709 vs. older), so you can discriminate or select the right image.
 
-**2. Compile your .NET application bits and publish it in a local folder**
+**1.B.2. Compile your .NET application bits and publish it in a local folder**
 
 In order to create a Windows Container image you first need to generate your .NET application's bits plus web/HTML files by compiling it and publishing in a local folder. In order to do so in Visual Studio, right click on the `eShopModernized `project and hit on the `Publish` menu option as shown below. 
 
@@ -69,7 +75,7 @@ Once those settings are confirmed, hit on the Publish button. Once it finished, 
 
 **NOTE ON DOCKER MULTI-STAGE BUILDS:** In the near future when Docker Multi-Stage builds are supported in Windows Containers you won't need to first compile and publish the app's bits in a folder because with Docker Multi-Stage build when running docker-compose build/up it will also compile the .NET bits in a previous stage by using a .NET SDK/Build image and then it will generate the final app's image, all in a single docker-compose build execution. No need to compile/publish from Visual Studio. Docker Multi-Stage builds are already supported for Linux containers as of April 2018.
 
-**2. Create the Windows Container image with "docker-compose build"**
+**1.B.3. Create the Windows Container image with "docker-compose build"**
 
 Now, with all the bits and web app files ready to be published placed on the **"obj\docker\publish"** folder, you can create the Docker image with the following steps.
 
@@ -107,6 +113,8 @@ If you want to authenticate against Azure Container Registry, you need to use th
 Example: `docker push eshop/modernizedmvc:4.7.1-windowsservercore-1709`
 
 ![image](https://user-images.githubusercontent.com/1712635/38699524-1971b112-3e4d-11e8-8e8b-25e6b4ff10d8.png)
+
+You can go ahead and push the rest of the images (WebForms image or WCF image) you might have created into your local repository, in a similar way.
 
 4. Check in the Docker Registry UI (in this case, Docker Hub portal) that the image was correctly uploaded.
 You can also check that our public eShopModernizedMVC images are published here:
