Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -38,8 +38,30 @@ This particular scenario focuses just on the area highlighted in yellow, meaning
 
 ### Option 1.A (Straightforward): Use a single script to build your All the apps and create All the Windows Container images
 
+As a convenient tool, we have created a single .CMD script that builds all the applications' bits and publish its files into a specific local tree of folders:
+        deploy\wcf\ 
+        deploy\mvc
+        deploy\webforms
 
-### Option 1.B (Manual steps per app and Windows Container images): Build/Publish your app's files with Visual Studio and create your Windows Container image with Docker CLI (docker-compose build or docker build)
+After the applications' files to be deployed are generated/published in those folders, the script builds/creates the Docker Windows Container image per each application.
+
+#### Procedure to build the application's bits/files and related Docker Windows Container images
+
+Make sure you have the path to MSBuild.exe (`C:\Program Files (x86)\MSBuild\14.0\Bin`) as part of your `Path` environment variable by checking/adding it like in the following screenshot:
+
+![image](https://user-images.githubusercontent.com/1712635/38892978-b5b1cf32-423d-11e8-8876-ccc298d1800f.png)
+ 
+In a PowerShell window or CMD window, move to your `eShopModernizing root folder`, then run the following Build.cmd script as the following execution:
+
+XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+
+With that, the script would have built the bits and the Docker images. You can check them out by typing `docker images` in the command-line:
+
+XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+
+You can now directly jump to the section **"Scenario 2: Publish/Push your Windows Container image into a Docker Registry (i.e. Docker Hub) using the Docker CLI"** in order to publish/push the images into the Docker Registry.
+
+### Option 1.B (Optional and manual steps per app and Windows Container images): Build/Publish your app's files with Visual Studio and create your Windows Container image with Docker CLI (docker-compose build or docker build)
 
 **1.B.1. Confirm/change the name and tag of your custom image to create**
 
