Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -53,11 +53,15 @@ Make sure you have the path to MSBuild.exe (`C:\Program Files (x86)\MSBuild\14.0
  
 In a PowerShell window or CMD window, move to your `eShopModernizing root folder`, then run the following Build.cmd script as the following execution:
 
-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+================ TBD IMAGE ==================
+
+The execution should finish like the following:
+
+================ TBD IMAGE ==================
 
 With that, the script would have built the bits and the Docker images. You can check them out by typing `docker images` in the command-line:
 
-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+================ TBD IMAGE ==================
 
 You can now directly jump to the section **"Scenario 2: Publish/Push your Windows Container image into a Docker Registry (i.e. Docker Hub) using the Docker CLI"** in order to publish/push the images into the Docker Registry.
 
