--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -36,7 +36,7 @@ This particular scenario focuses just on the area highlighted in yellow, meaning
 ![image](https://user-images.githubusercontent.com/1712635/38696246-7fa56a32-3e43-11e8-8769-3e4768308817.png)
 
 
-### Option 1.A (Straightforward): Use a single script to build your All the apps and create All the Windows Container images
+### Option 1.A (Straightforward): Use a single script to build All your apps and create All the related Windows Container images
 
 As a convenient tool, we have created a single .CMD script that builds all the applications' bits and publish its files into a specific local tree of folders:
         deploy\wcf\ 
