Updated 03. Publishing your Windows Container images into a Docker Registry (markdown)

--- a/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
+++ b/03.-Publishing-your-Windows-Container-images-into-a-Docker-Registry.md
@@ -51,7 +51,7 @@ Make sure you have the path to MSBuild.exe (`C:\Program Files (x86)\MSBuild\14.0
 
 ![image](https://user-images.githubusercontent.com/1712635/38892978-b5b1cf32-423d-11e8-8876-ccc298d1800f.png)
  
-In a PowerShell window or CMD window, move to your `eShopModernizing root folder`, then run the following Build.cmd script as the following execution:
+In a PowerShell window or CMD window, move to your `eShopModernizing root folder`, then run the [Build.cmd](https://github.com/dotnet-architecture/eShopModernizing/blob/master/build.cmd) script as the following execution:
 
 ================ TBD IMAGE ==================
 
