Updated 23. High DPI Improvements (markdown)

--- a/23.-High-DPI-Improvements.md
+++ b/23.-High-DPI-Improvements.md
@@ -1,6 +1,12 @@
 As a traditional business, it's possible that you first wrote your WinForms application on a low resolution monitor. Now that you've invested in the latest 4K monitors, you want your application to look just as nice and function properly without having to do any redesign. Luckily, by making a couple edits to your application you'll be able to do this in just a few minutes.
 
-NOTE: Make sure that your WinForms app is targeting .NET Framework 4.7 or above, otherwise the improvements will not work.
+**IMPORTANT NOTE**: Make sure that your WinForms app is targeting .NET Framework 4.7 or above, otherwise the improvements will not work. You can install .NET Framework 4.7.1 from:
+- Visual Studio Installer (Modify)
+- [.NET Framework Developer Pack](https://www.microsoft.com/net/download/visual-studio-sdks)
+
+In the following image you can see how to specify to Visual Studio installer to add .NET Framework 4.7.1:
+
+![image](https://user-images.githubusercontent.com/1712635/38950108-56b355ac-42f9-11e8-89ed-fae5a221a75d.png)
 
 Follow the two simple instructions below to enable High DPI compatibility in your app.
 
