--- a/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
+++ b/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
@@ -1,1 +1,11 @@
-TBD
+
+
+# Setting up Kubernetes in Docker for Windows
+As of mid-April 2018, using a Preview version of Windows 10 () and Docker for Windows Edge channel, the steps to set up Kuberentes in Docker for Windows are the following:
+
+1. Switch to Linux mode in Docker for Windows
+2. Go to the Kubernetes tab and enable Kubernetes. It'll be installed as shown in the following screenshot.
+
+![image](https://user-images.githubusercontent.com/1712635/39012481-6107d836-43c9-11e8-8458-fdc75a11b0aa.png)
+
+3. TBD
