Updated 04. Deploying into local Kubernetes in Windows 10 and Docker for Windows development environment (markdown)

--- a/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
+++ b/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
@@ -8,4 +8,8 @@ As of mid-April 2018, using a Preview version of Windows 10 () and Docker for Wi
 
 ![image](https://user-images.githubusercontent.com/1712635/39012481-6107d836-43c9-11e8-8458-fdc75a11b0aa.png)
 
+After the process is done, you should get a success message like the following:
+
+![image](https://user-images.githubusercontent.com/1712635/39012718-129c4988-43ca-11e8-8f15-4ec72eaf48b1.png)
+
 3. TBD
