Updated 04. Deploying into local Kubernetes in Windows 10 and Docker for Windows development environment (markdown)

--- a/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
+++ b/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
@@ -3,7 +3,10 @@
 # Setting up Kubernetes in Docker for Windows
 As of mid-April 2018, using a Preview version of Windows 10 () and Docker for Windows Edge channel, the steps to set up Kuberentes in Docker for Windows are the following:
 
-1. Switch to Linux mode in Docker for Windows
+1. If you are in "Windows containers mode" in "Docker for Windows", switch to "Linux containers mode" in Docker for Windows. This step is only needed in the Preview in order to enable Kubernetes. In the final version with Kubernetes support for Windows Containers, this step might not be required.
+
+![image](https://user-images.githubusercontent.com/1712635/39013199-89e26abc-43cb-11e8-925f-b54e25234f3f.png)
+
 2. Go to the Kubernetes tab and enable Kubernetes. The Kubernetes cluster will be installed as shown in the following screenshot.
 
 ![image](https://user-images.githubusercontent.com/1712635/39012481-6107d836-43c9-11e8-8458-fdc75a11b0aa.png)
@@ -12,4 +15,7 @@ After the process is done, you should get a success message like the following:
 
 ![image](https://user-images.githubusercontent.com/1712635/39012718-129c4988-43ca-11e8-8f15-4ec72eaf48b1.png)
 
-3. TBD
+3. Now, switch to Windows Containers:
+
+![image](https://user-images.githubusercontent.com/1712635/39013031-fb72cce0-43ca-11e8-9043-daaf9fcdf33e.png)
+
