Updated 04. Deploying into local Kubernetes in Windows 10 and Docker for Windows development environment (markdown)

--- a/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
+++ b/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
@@ -7,7 +7,7 @@ As of mid-April 2018, using a Preview version of Windows 10 () and Docker for Wi
 
 ![image](https://user-images.githubusercontent.com/1712635/39013199-89e26abc-43cb-11e8-925f-b54e25234f3f.png)
 
-2. Go to the Kubernetes tab and enable Kubernetes. The Kubernetes cluster will be installed as shown in the following screenshot.
+2. Hit the "Settings" menu option and within the Settings UI window, go to the Kubernetes tab and enable Kubernetes. The Kubernetes cluster will be installed as shown in the following screenshot.
 
 ![image](https://user-images.githubusercontent.com/1712635/39012481-6107d836-43c9-11e8-8458-fdc75a11b0aa.png)
 
