--- a/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
+++ b/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
@@ -19,3 +19,10 @@ After the process is done, you should get a success message like the following:
 
 ![image](https://user-images.githubusercontent.com/1712635/39013031-fb72cce0-43ca-11e8-9043-daaf9fcdf33e.png)
 
+At this point you should be in "Windows Containers mode" plus you should have a local Kubernetes cluster installed.
+
+You can check that out by looking at the Settings window where you should see a message saying "Kubernetes is running":
+
+![image](https://user-images.githubusercontent.com/1712635/39013488-5e7e822e-43cc-11e8-9c48-7a8508151a72.png)
+
+
