Updated 04. Deploying into local Kubernetes in Windows 10 and Docker for Windows development environment (markdown)

--- a/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
+++ b/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
@@ -19,10 +19,19 @@ After the process is done, you should get a success message like the following:
 
 ![image](https://user-images.githubusercontent.com/1712635/39013031-fb72cce0-43ca-11e8-9043-daaf9fcdf33e.png)
 
+
+3. Check Kubernetes state.
+
 At this point you should be in "Windows Containers mode" plus you should have a local Kubernetes cluster installed.
 
 You can check that out by looking at the Settings window where you should see a message saying "Kubernetes is running":
 
 ![image](https://user-images.githubusercontent.com/1712635/39013488-5e7e822e-43cc-11e8-9c48-7a8508151a72.png)
+
+Now, you can check that the Kubernetes cluster is working by typing either from PowerShell or CMD:
+
+![image](https://user-images.githubusercontent.com/1712635/39013955-d18d3200-43cd-11e8-9180-5d9ea0fdf8c8.png)
+
+
 
 
