Updated 04. Deploying into local Kubernetes in Windows 10 and Docker for Windows development environment (markdown)

--- a/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
+++ b/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
@@ -33,5 +33,12 @@ Now, you can check that the Kubernetes cluster is working by typing either from 
 ![image](https://user-images.githubusercontent.com/1712635/39013955-d18d3200-43cd-11e8-9180-5d9ea0fdf8c8.png)
 
 
+# Deploy the ASP.NET MVC app (eShopModernizedMVC) to the local Kubernetes cluster 
+
+Using PowerShell or CMD, position into the folder with the .yml files for Kubernetes "Kubernetes-DockerForWindows" and run the following `kubectl create` command specifying the YAML manifest (in Kubernetes native format):
+
+`kubectl create -f eshop-modernized-mvc-k8s-services-deployment.yml`
+
+![image](https://user-images.githubusercontent.com/1712635/39015115-3c6b6058-43d1-11e8-9429-44115989f018.png)
 
 
