Updated 04. Deploying into local Kubernetes in Windows 10 and Docker for Windows development environment (markdown)

--- a/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
+++ b/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
@@ -41,4 +41,15 @@ Using PowerShell or CMD, position into the folder with the .yml files for Kubern
 
 ![image](https://user-images.githubusercontent.com/1712635/39015115-3c6b6058-43d1-11e8-9429-44115989f018.png)
 
+Wait for a few minutes until the deployments are ready.
 
+You can check out the deployment's state by running:
+
+kubectl get deployments
+
+![image](https://user-images.githubusercontent.com/1712635/39015430-2ed56ee2-43d2-11e8-9e17-be5af169ce1f.png)
+
+If the attibute "available" is "0", the deployment is still not ready. Wait until it is "1", like in the following screenshot:
+
+
+ 
