--- a/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
+++ b/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
@@ -49,7 +49,7 @@ kubectl get deployments
 
 ![image](https://user-images.githubusercontent.com/1712635/39015430-2ed56ee2-43d2-11e8-9e17-be5af169ce1f.png)
 
-If the attibute "available" is "0", the deployment is still not ready. Wait until it is "1", like in the following screenshot:
+If the attibute "AVAILABLE" is "0", the deployment is still not ready. Wait until it is "1", like in the following screenshot:
 
 
  
