Updated 04. Deploying into local Kubernetes in Windows 10 and Docker for Windows development environment (markdown)

--- a/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
+++ b/04.-Deploying-into-local-Kubernetes-in-Windows-10-and-Docker-for-Windows-development-environment.md
@@ -51,5 +51,6 @@ kubectl get deployments
 
 If the attibute "AVAILABLE" is "0", the deployment is still not ready. Wait until it is "1", like in the following screenshot:
 
+======================== TBD ==========================
 
  
