Updated 05. Deploying the Apps to ACI (Azure Container Instances) (markdown)

--- a/05.-Deploying-the-Apps-to-ACI-(Azure-Container-Instances).md
+++ b/05.-Deploying-the-Apps-to-ACI-(Azure-Container-Instances).md
@@ -162,3 +162,18 @@ Once the app has the database created in the SQL Container any data operation in
 Deploying Windows Containers with either SQL Server or full .NET Framework / ASP.NET into Azure Container Instances (ACI) is not quite as fast as deploying to a regular Docker Host (like a Windows Server 2016 with Windows Containers) because the Docker image has to be downloaded every time and the sizes of the [SQL container image (15.1 GB)](https://hub.docker.com/r/microsoft/mssql-server-windows-developer/) and the [ASP.NET container image (13.9 GB)](https://hub.docker.com/r/microsoft/aspnet/) are significantly large, however it is much cheaper than maintaining your own docker host (permanently on-line Windows Server 2016 with Windows Containers VM in Azure) not to mention a whole orchestrator like Kubernetes in Azure (AKS/ACS) or Azure Service Fabric which are, on the other hand, great choices for production deployments. 
 
 As main conclusion, using Azure Container Instances is a very compelling option for Dev/Test scenarios and for CI/CD pipelines.
+
+## Using ARM templates for ACI deployment
+
+We have included ARM templates for deploying to Azure Container Instances, using standard ARM deployment instead of  `az container`. In folder `/ACI` there are four files:
+
+* `aci.json`: Main ARM template
+* `webforms.parameters.json`: ARM parameters file for webforms deployment
+* `mvc.parameters.json`: ARM parameters file for MVC application deployment
+* `wcf.parameters.json`: ARM parameters file for WCF service (part of NTier sample)
+
+To install the appropiate application deploy the `aci.json` template and the corresponding parameters file:
+
+```
+az group deployment create --resource-group <my-resource-group> --parameters @<xxxx.parameters.json> --template-file aci.json
+```
